demos/priority-classes/good/deployment-high.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priority-high
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priority-classes
      level: high
  template:
    metadata:
      labels:
        app: priority-classes
        level: high
    spec:
      priorityClassName: high-priority
      volumes:
        - name: html
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
