demos/priority-classes/good/service-high.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: priority-high
spec:
  selector:
    app: priority-classes
    level: high
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
