demos/priority-classes/good/service-low.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: priority-low
spec:
  selector:
    app: priority-classes
    level: low
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
